# zofiri-hg-to-git

./: .cproject  .hgignore  .project  .pydevproject  CMakeLists.txt
include/: zof.h
mods/: CMakeLists.txt  hello.c
mods/hello/: CMakeLists.txt  hello.c  hello.zofi
mods/humanoid/: CMakeLists.txt  bot.cpp  bot.h  control.cpp  control.h  house.cpp  house.h  hum.cpp  hum.h  humanoid.c  humanoid.cpp
src/: CMakeLists.txt  etc.h  log.h  mat.h  mod.cpp  net.cpp  net.h  pub.cpp  pub.h  sim.cpp  sim.h  util.h  viz.cpp  viz.h  world.cpp  world.h  zof.cpp  zof.h  zofiri.cpp  zofiri.h
test/: mat.py  parts.py  parts_world.py  test.py  test.zof  world.cpp  world.h  world.py  zofiri.py
